correct csp + intro h3 to h2 + contrast serives btn

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -339,7 +339,7 @@ header{
 }
 
 .my-services .btn{
-    color: var(--clr-light);
+    color: var(--clr-dark);
 }
 .section__title--services{
     color: var(--clr-accent);
